--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'application'
 repositories {
     jcenter()
     mavenCentral()
+    //mavenLocal()
 }
 
 mainClassName =  'de.jensd.fx.glyphs.examples.CssStyledGlyphsApp'
@@ -17,16 +18,17 @@ if (!hasProperty('mainClass')) {
 }
 
 task execute(type:JavaExec) {
-   main = mainClass
-   classpath = sourceSets.main.runtimeClasspath
+    main = mainClass
+    classpath = sourceSets.main.runtimeClasspath
 }
 
 dependencies {
-    compile 'de.jensd:fontawesomefx-fontawesome:4.6.3'
-    compile 'de.jensd:fontawesomefx-materialdesignfont:1.6.50'
-    compile 'de.jensd:fontawesomefx-materialicons:2.2.0'
-    compile 'de.jensd:fontawesomefx-octicons:4.3.0'
-    compile 'de.jensd:fontawesomefx-icons525:2.6.0'
-    compile 'de.jensd:fontawesomefx-weathericons:2.0-3'
-    compile 'org.controlsfx:controlsfx:8.40.10'
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-3'
+    compile 'de.jensd:fontawesomefx-icons525:3.0.0-2'
+    compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-2'
+    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-3'
+    compile 'de.jensd:fontawesomefx-octicons:4.3.0-3'
+    compile 'de.jensd:fontawesomefx-weathericons:2.0.10-3'
+    compile 'de.jensd:fontawesomefx-controls:8.14'
+    compile 'org.controlsfx:controlsfx:8.40.11'
 }
